# libellus

./: CMakeLists.txt  README.md
CMakeModules/: AddResources.cmake
src/: CMakeLists.txt  main.cpp  repository.cpp  repository.hpp
src/resources/static/: style.css
